--- a/values.yaml
+++ b/values.yaml
@@ -16,5 +16,5 @@ front:
     tag: latest
   replicaCount: 1
   ingress:
-    tlsEnabled: false
-    host: www.to-replace.takima.school
+    tlsEnabled: true
+    host: front.phappy.takima.school
