--- a/templates/api-config.yaml
+++ b/templates/api-config.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.name }}-api
+  name: {{ include ("MyAppCtx.fullname") . }}-api
 data:
-  db_endpoint: {{ .Values.name }}-pg:5432
+  db_endpoint: {{ include ("MyAppCtx.fullname") . }}-pg:5432
   db_name: "cdb"
 {{- end }}
