--- a/templates/api-ingress.yaml
+++ b/templates/api-ingress.yaml
@@ -4,7 +4,7 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
-  name: {{ .Values.name }}-api-ingress
+  name: {{ include ("MyAppCtx.fullname") . }}-api-ingress
 spec:
   rules:
   - host: {{ .Values.api.ingress.host }}
@@ -12,7 +12,7 @@ spec:
       paths:
       - backend:
           service:
-            name: {{ .Values.name }}-api-service
+            name: {{ include ("MyAppCtx.fullname") . }}-api-service
             port:
               number: 8080
         path: /
