--- a/templates/api-service.yaml
+++ b/templates/api-service.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}-api-service
+  name: {{ include ("MyAppCtx.fullname") . }}-api-service
 spec:
   selector:
-    app: {{ .Values.name }}-api
+    app: {{ include ("MyAppCtx.fullname") . }}-api
   ports:
     - protocol: TCP
       port: 8080
