--- a/templates/front-ingress.yaml
+++ b/templates/front-ingress.yaml
@@ -4,7 +4,7 @@ kind: Ingress
 metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
- name: {{ .Values.name }}-front
+ name: {{ include ("MyAppCtx.fullname") . }}-front
 spec:
   rules:
   - host: {{ .Values.front.ingress.host }}
@@ -12,7 +12,7 @@ spec:
       paths:
       - backend:
           service:
-            name: {{ .Values.name }}-front
+            name: {{ include ("MyAppCtx.fullname") . }}-front
             port:
               number: 80
         path: /
