--- a/templates/front-service.yaml
+++ b/templates/front-service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}-front
+  name: {{ include ("MyAppCtx.fullname") . }}-front
 spec:
   selector:
     app: front
